--- a/01-getting-started/index.html
+++ b/01-getting-started/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html ng-app="store">
+<html ng-app="shoeStore">
   <head>
+    <title>Learning Angular.js by Gokhan Tamkoc</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
   </head>
   <body>
-    <p>I am {{4 + 25}} years old.</p>
+    <p>I am {{6 + 23}} years old.</p>
     <p>{{"hello" + " angular js developer"}}</p>
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
